--- a/OSAP_web/package.json
+++ b/OSAP_web/package.json
@@ -10,6 +10,7 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
     "element-plus": "^2.2.2",
     "vue": "^3.2.36"
   },
