--- a/OSAP_web/OSAP_vue/package.json
+++ b/OSAP_web/OSAP_vue/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "axios": "^1.2.0",
     "element-plus": "^2.2.2",
     "vue": "^3.2.36"
   },
